syntax="proto3";
package chatService;
option go_package="chatService/proto";

message UserDetails{
  string userName =1;
  string password=2;
}

service ChatService {
  rpc addUser(UserDetails) returns (UserDetails);
}